@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v24.8.24-cur, done by sprscc13@mrn0b0dy.
--;-;-;2024-08-24 07:14:53, took 00:08:20, with 60 workers, on 631 cases, 0 failed, 0 traces, 0 retries
+-;-;-;2024-08-24 08:08:41, took 00:10:45, with 60 workers, on 631 cases, 0 failed, 0 traces, 3 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/p4lang-acl001.tst;p4lang-acl001.tst;success;p4lang: copp
 http://sources.freertr.org/cfg/p4lang-acl002.tst;p4lang-acl002.tst;success;p4lang: ingress access list
