@@ -15,7 +15,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v24.8.24-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2024-08-24 07:14:53, took 00:08:20, with 60 workers, on 631 cases, 0 failed, 0 traces, 0 retries<br/>
+tested: 2024-08-24 08:08:41, took 00:10:45, with 60 workers, on 631 cases, 0 failed, 0 traces, 3 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
